# DSL2016_Summer

./: README.md
dsl__projects__dnn/: CMakeLists.txt  Note  connect_drone.sh  package.xml  setup.py  setup.sh  trajectory.npy
dsl__projects__dnn/Trainer/: 0.6_0.9_cleaned.npy  0.6_0.9_processed.npy  DSLcontroller.py  Experience_real.npy  Experience_sim.npy  NN_generate_data.py  NN_generate_data2.py  NN_test.py  R2rpy.py  TrainingData.npy  TrajTestor.py  clamp.py  convertcmd.py  desiredstate.py  desiredstate_new.py  determine_drag.py  determineforces.py  generate_desiredstate.py  generate_randomized_trajectory.py  hi.py  innerdynamics_approx.py  learning_agent.py  main.py  main_pao.py  parameters.py  plot_data.npy  quadsim.py  rpy2R.py  simulation_cal_main.py
dsl__projects__dnn/Trainer/saved_networks_quadrotor/: Trajectory_Train  checkpoint
dsl__projects__dnn/launch/: ardrone_driver_global_ctrl_params.launch  launch_quadrotor.launch  launch_quadrotor_multi.launch  quadrocopter_world.launch  spawn_quadrotor.launch  track_reference_signal.launch  track_reference_signal_demo.launch  track_waypoint_signal.launch
dsl__projects__dnn/msg/: Equation.msg  MultiStateData.msg  State.msg  StateData.msg
dsl__projects__dnn/scripts/: correction_signal.py  data_cleaning.py  datacleaning_main.py  demo_config.py  desired_trajectory.py  drone_video_display.py  learning_agent.py  learning_agent_jeany.py  nonlinear_controller_cal.py  outgoing_delay.py  phys_drone.py  plot_window.pyw  plot_window.pywc  quadsim.py  reference_signal.py
dsl__projects__dnn/srv/: SetState.srv
(+32 files in other folders)
